--- a/exposition.html
+++ b/exposition.html
@@ -18,8 +18,8 @@
     <link href="./styles/exposition.css" rel="stylesheet" type="text/css">
     
     <!-- META -->
-    <title>MusBA - Découvrez le Musée des Beaux-Arts Bordeaux</title>
-    <meta name="description" content="">
+    <title>Exposition - Absolutely Bizarre - MusBA</title>
+    <meta name="description" content="La collection Absolutely Bizarre du musée des beau arts est là ! L'occasion de découvrir une vision de l'art revisité par les artistes anglais du XIX siècle.">
 </head>
 <body>
     <header>
@@ -59,37 +59,50 @@
                 <path d="M4.25244 61.8426C4.25244 64.5422 4.27093 67.2603 4.27093 69.9598C4.78866 69.9598 5.32487 69.9413 5.84259 69.9413C9.0229 70.0708 10.2802 69.3866 10.2802 67.5561C10.2802 67.0938 10.2432 66.8165 10.1323 66.5946C10.0399 66.4097 9.92892 66.2803 9.81798 66.1693C9.59609 65.929 9.37421 65.7626 9.2078 65.6701C9.31874 65.5222 9.48515 65.3003 9.61458 64.986C9.67005 64.8565 10.0214 63.8766 9.50364 62.9521C9.18931 62.3974 8.70857 62.1385 8.56065 62.046C8.04292 61.7687 7.61765 61.8242 6.36032 61.8057C5.80561 61.8242 5.10299 61.8242 4.25244 61.8426ZM8.4682 63.5253C8.61612 63.7471 8.70857 64.0245 8.69008 64.2464C8.67159 64.7086 8.24631 65.1339 7.65463 65.3003C6.952 65.2818 6.26787 65.2633 5.56524 65.2633C5.56524 64.4867 5.54675 63.7102 5.54675 62.9336C6.15693 62.9521 6.50824 62.9521 6.87804 62.9521C7.50671 62.9705 7.85802 62.9705 8.17235 63.2109C8.33876 63.3403 8.43121 63.4883 8.4682 63.5253ZM8.57914 66.6501C8.81951 66.872 8.98592 67.2603 8.98592 67.5746C8.98592 68.5176 8.39423 68.8689 6.82257 68.8689H5.47279V67.5746V66.2803H6.82257C7.93198 66.2803 8.24631 66.3542 8.57914 66.6501Z" fill="white"/>
               </svg>
             </a>
-            <select id="language-selector" class="language" value="FR">
-                <option value="fr" selected>FR</option>
-                <option value="en">EN</option>
-                <option value="es">ES</option>
+            <select class="language" id="language-selector" value="FR">
+                <option value="FR" selected>FR</option>
+                <option value="EN">EN</option>
+                <option value="ES">ES</option>
             </select>
         </div>
         <hr>
         <div class="bottom-header">
             <nav>
                 <ul class="navigation">
-                    <li><a href="#" data-translation-key="home">Accueil</a></li>
-                    <li><a href="#" data-translation-key="ticketing">Billeterie</a></li>
-                    <li><a href="#" data-translation-key="exhibitions">Nos expositions</a></li>
-                    <li><a href="#" data-translation-key="collections">Nos collections</a></li>
-                    <li><a href="#" data-translation-key="workshops">Nos ateliers</a></li>
-                  </ul>
+                    <li>
+                        <a class="active" href="#">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="#">Billeterie</a>
+                    </li>
+                    <li>
+                        <a href="#">Nos expositions</a>
+                    </li>
+                    <li>
+                        <a href="#">Nos collections</a>
+                    </li>
+                    <li>
+                        <a href="#">Nos ateliers</a>
+                    </li>
+                </ul>
             </nav>
             <form class="search-bar-wrapper">
                 <div class="input-wrapper">
-                    <input type="text" placeholder="Saisissez votre recherche..." class="input-field" data-translation-key="search_placeholder">
-                    <button type="submit" class="search-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none" class="google">
-                            <g clip-path="url(#clip0_492_717)">
-                                <path d="M14.7556 16L9.15556 10.4C8.71111 10.7556 8.2 11.037 7.62222 11.2444C7.04444 11.4519 6.42963 11.5556 5.77778 11.5556C4.16296 11.5556 2.7963 10.9963 1.67778 9.87778C0.559259 8.75926 0 7.39259 0 5.77778C0 4.16296 0.559259 2.7963 1.67778 1.67778C2.7963 0.559259 4.16296 0 5.77778 0C7.39259 0 8.75926 0.559259 9.87778 1.67778C10.9963 2.7963 11.5556 4.16296 11.5556 5.77778C11.5556 6.42963 11.4519 7.04444 11.2444 7.62222C11.037 8.2 10.7556 8.71111 10.4 9.15556L16 14.7556L14.7556 16ZM5.77778 9.77778C6.88889 9.77778 7.83333 9.38889 8.61111 8.61111C9.38889 7.83333 9.77778 6.88889 9.77778 5.77778C9.77778 4.66667 9.38889 3.72222 8.61111 2.94444C7.83333 2.16667 6.88889 1.77778 5.77778 1.77778C4.66667 1.77778 3.72222 2.16667 2.94444 2.94444C2.16667 3.72222 1.77778 4.66667 1.77778 5.77778C1.77778 6.88889 2.16667 7.83333 2.94444 8.61111C3.72222 9.38889 4.66667 9.77778 5.77778 9.77778Z" fill="white" />
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_492_717">
-                                    <rect width="16" height="16" fill="white" />
-                                </clipPath>
-                            </defs>
-                        </svg>
+                  <input type="text" placeholder="Saisissez votre recherche..." class="input-field">
+                  <button type="submit" class="search-icon" title="search">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                  class="google">
+                                  <g clip-path="url(#clip0_492_717)">
+                                      <path
+                                          d="M14.7556 16L9.15556 10.4C8.71111 10.7556 8.2 11.037 7.62222 11.2444C7.04444 11.4519 6.42963 11.5556 5.77778 11.5556C4.16296 11.5556 2.7963 10.9963 1.67778 9.87778C0.559259 8.75926 0 7.39259 0 5.77778C0 4.16296 0.559259 2.7963 1.67778 1.67778C2.7963 0.559259 4.16296 0 5.77778 0C7.39259 0 8.75926 0.559259 9.87778 1.67778C10.9963 2.7963 11.5556 4.16296 11.5556 5.77778C11.5556 6.42963 11.4519 7.04444 11.2444 7.62222C11.037 8.2 10.7556 8.71111 10.4 9.15556L16 14.7556L14.7556 16ZM5.77778 9.77778C6.88889 9.77778 7.83333 9.38889 8.61111 8.61111C9.38889 7.83333 9.77778 6.88889 9.77778 5.77778C9.77778 4.66667 9.38889 3.72222 8.61111 2.94444C7.83333 2.16667 6.88889 1.77778 5.77778 1.77778C4.66667 1.77778 3.72222 2.16667 2.94444 2.94444C2.16667 3.72222 1.77778 4.66667 1.77778 5.77778C1.77778 6.88889 2.16667 7.83333 2.94444 8.61111C3.72222 9.38889 4.66667 9.77778 5.77778 9.77778Z"
+                                          fill="white" />
+                                  </g>
+                                  <defs>
+                                      <clipPath id="clip0_492_717">
+                                          <rect width="16" height="16" fill="white" />
+                                      </clipPath>
+                                  </defs>
+                              </svg>
                   </button>
                 </div>
               </form>
@@ -138,7 +151,7 @@
             </p>
         </section>
         <section class="main-img">
-            <img src="./assets/img/exposition/image-1.png" alt="">
+            <img src="./assets/img/exposition/image-1.webp" alt="">
             <p class="legend" data-translation-key="first_pic_caption"> Samuel Colman, Un paysage romantique avec l’arrivée de la reine de Saba 1830</p>
         </section>
         <div class="expo">
@@ -160,7 +173,7 @@
             </section>
             <div class="article-expo">
                 <section class="content-expo">
-                    <h2 class="title-expo" data-translation-key="title_exhibition">Grand titre de l'exposition</h2>
+                    <h2 class="title-expo" data-translation-key="title_exhibition">Expo Absolutely Bizarre</h2>
                     <p class="text-expo" data-translation-key="first_paragraph">
                         Les artistes renouvellent une grande variété de genres. En exposant la peinture
                         de la vie citadine et des scènes de genre, vu au prisme des transformations sociales
@@ -183,7 +196,7 @@
                         britannique, qui eut lieu trois ans plus tard.
                     </p>
                     <div class="img-article">
-                        <img src="./assets/img/exposition/image-2.png" alt="">
+                        <img src="./assets/img/exposition/image-2.webp" alt="">
                         <p class="legend" data-translation-key="second_pic_caption">
                             William West, Les Hébreux traversant le désert, précédés par le pilier de lumière (The
                             Israelites Passing through the Wilderness, Preceded by the Pillar of Light), 1845, 
@@ -205,7 +218,7 @@
                         1900 au Bristol Museum & Art Gallery.
                     </p>
                     <div class="img-article">
-                        <img src="./assets/img/exposition/image-3.png" alt="">
+                        <img src="./assets/img/exposition/image-3.webp" alt="">
                         <p class="legend" data-translation-key="third_pic_caption">
                             Francis Danby, Une scène à Leigh Woods (A Scene in Leigh Woods), 1822, huile sur toile, 
                             Bristol Museum & Art Gallery.
@@ -236,17 +249,17 @@
                     <h2 class="title-section" data-translation-key="other_collections">Découvir nos autres collections </h2>
                     <div class="container-articles">
                         <article class="box-collection">
-                            <img src="./assets/img/exposition/cover-1.png" alt="">
+                            <img src="./assets/img/exposition/cover-1.webp" alt="">
                             <p class="title-box-collection" data-translation-key="first_collection_name">Strandbeests</p>
                             <p class="text-box-collection" data-translation-key="first_collection_intro">Strandbeests de Theo Jansen, dans le cadre du FAB</p>
                         </article>
                         <article class="box-collection">
-                            <img src="./assets/img/exposition/cover-2.png" alt="">
+                            <img src="./assets/img/exposition/cover-2.webp" alt="">
                             <p class="title-box-collection" data-translation-key="second_collection_name" >Rosa Bonheur (1822-1899)</p>
                             <p class="text-box-collection" data-translation-key="fsecond_collection_intro">George Achille-Fould, Portrait de Rosa Bonheur © Musée des Beaux-Arts, Photo : F. Deval.</p>
                         </article>
                         <article class="box-collection">
-                            <img src="./assets/img/exposition/cover-3.png" alt="">
+                            <img src="./assets/img/exposition/cover-3.webp" alt="">
                             <p class="title-box-collection" data-translation-key="third_collection_name">Dans l'intimité de Roger B</p>
                             <p class="text-box-collection" data-translation-key="third_collection_intro">Salle des Modernes, aile Nord.</p>
                         </article>
@@ -297,9 +310,9 @@
     </main>
 
     <footer>
-        <div class= "top-footer grid">
+        <div class= "top-footer">
             <div class="logo">
-                <svg xmlns="http://www.w3.org/2000/svg" width="203" height="90" viewBox="0 0 203 90" fill="none">
+                <svg class="logo-footer" xmlns="http://www.w3.org/2000/svg" width="203" height="90" viewBox="0 0 203 90" fill="none">
                     <path d="M0.0712282 1.10578C0.546084 1.17701 1.25837 1.31946 2.01814 1.62812C2.01814 1.62812 4.03628 1.91303 4.89102 3.59877C5.31839 4.42977 5.34213 5.6644 5.46084 27.1516C5.46084 34.7019 5.46084 42.2758 5.46084 49.826C7.00413 49.826 8.54741 49.826 10.0907 49.826L10.2094 30.7131C10.3281 11.885 10.3281 11.6238 10.7555 12.5498C11.0167 13.0722 12.1088 15.6364 13.2247 18.2481C14.3169 20.8598 15.4091 23.424 15.6465 23.9464C15.8839 24.4687 17.0711 27.2466 18.282 30.1195C19.5166 32.9924 21.9146 38.5957 23.6241 42.5845L26.7344 49.826H29.0849H31.4355L32.314 47.8079C37.4661 35.8415 42.5946 23.8514 47.7468 11.885C47.723 23.4478 47.6755 34.9868 47.6518 46.5495C47.6043 46.8107 47.5093 47.2143 47.2244 47.5704C46.251 48.7813 43.8292 48.7101 43.8292 48.7101C43.8292 48.7101 43.2356 48.7101 42.3809 48.7338C42.3809 48.9238 42.3809 49.1375 42.3809 49.3512C42.3809 49.5174 42.4046 49.6836 42.4284 49.826C47.4381 49.826 52.4241 49.826 57.4338 49.826C57.4338 49.6598 57.4101 49.4936 57.4101 49.3274C57.4101 49.1137 57.4101 48.9238 57.4101 48.7338C57.1964 48.7338 56.7928 48.7576 56.3179 48.6626C56.3179 48.6626 54.1811 48.6389 53.1364 46.6207C52.7328 45.8372 52.709 44.2227 52.709 23.0441V0.322266H50.2398H47.7705L46.8208 2.62532C45.7999 5.07083 44.7552 7.49259 43.7342 9.9381C38.9619 21.1922 34.1184 32.3988 29.1799 43.5817C28.4439 42.0384 27.328 39.6641 25.9984 36.72C22.6269 29.2885 20.5613 24.0176 18.0445 18.2956C16.1926 14.0694 13.5571 7.99119 10.3993 0.464723C6.9329 0.44098 3.46645 0.417237 0 0.393494C0.0237428 0.630922 0.0474854 0.86835 0.0712282 1.10578Z" fill="#252525"/>
                     <path d="M113.8 0.181424C113.8 0.442595 113.8 0.680024 113.8 0.941194C114.275 0.941194 114.963 0.941194 115.77 1.13114C116.554 1.29734 117.385 1.48728 118.026 2.05711C118.81 2.74565 119.047 3.74285 119.047 4.24144C119.094 11.8391 119.118 19.4368 119.166 27.0345L119.284 49.8276H131.298C142.03 49.8276 143.478 49.7801 145.14 49.4003C150.15 48.2131 153.474 45.0553 154.732 40.2118C155.255 38.1224 155.278 33.8962 154.732 32.1867C153.735 28.9577 151.029 25.7287 148.108 24.1854C147.348 23.7818 146.731 23.3544 146.731 23.2357C146.755 23.0932 147.23 22.6421 147.823 22.2148C149.2 21.1938 150.839 18.9857 151.48 17.2288C151.812 16.3978 152.049 15.0919 152.121 13.8098C152.524 7.18555 148.868 2.41325 142.149 0.798738C142.125 0.798738 141.721 0.703766 141.318 0.608795C136.688 -0.245946 122.134 -0.00851799 113.8 0.181424ZM141.864 4.90624C144.001 5.61853 145.544 6.90064 146.494 8.72884C147.301 10.2959 147.325 10.4621 147.301 12.8838C147.301 14.902 147.206 15.6617 146.779 16.7302C146.09 18.4871 144.499 20.0779 142.742 20.7902C141.436 21.3125 141.057 21.3363 132.842 21.455C128.14 21.5262 124.223 21.55 124.128 21.5025C124.009 21.455 123.938 17.5849 123.938 12.8838V4.33642L132.319 4.40764C139.323 4.50262 140.867 4.57384 141.864 4.90624ZM135.809 25.7999C142.03 25.8949 142.932 26.0373 145.52 27.3669C149.818 29.575 151.527 35.0596 149.556 40.3543C148.963 41.945 147.182 43.8682 145.663 44.5805C143.526 45.6014 142.719 45.6726 133.15 45.6726H123.938V35.7244C123.938 29.3851 124.033 25.7287 124.175 25.6812C124.294 25.6337 125.671 25.6337 127.191 25.6575C128.734 25.7049 132.604 25.7524 135.809 25.7999Z" fill="#252525"/>
                     <path d="M167.789 0.181641C167.837 0.419069 167.884 0.656497 167.932 0.870182C168.81 0.893925 169.57 0.988896 170.14 1.08387C171.754 1.3213 172.134 1.58247 172.372 1.89112C172.609 2.19978 172.68 2.55592 172.704 2.81709C172.989 5.54751 171.351 8.49162 171.351 8.49162C170.496 10.6047 169.071 14.2611 168.169 16.6117C167.243 18.9622 165.819 22.6423 164.964 24.8029C164.109 26.9635 161.759 32.9942 159.717 38.2176C158.862 40.402 157.604 43.8209 155.657 48.4982C155.419 49.0681 155.229 49.5429 155.087 49.8516C156.773 49.8516 158.482 49.8516 160.168 49.8516C160.761 48.4508 161.331 47.0262 161.901 45.5779C162.78 43.3698 163.611 41.1855 164.37 39.0486L165.415 36.3182L177.168 36.247C181.157 36.247 185.145 36.2707 189.134 36.2707C190.796 40.9243 191.983 44.3433 192.316 45.3642C192.387 45.6016 192.601 46.2189 192.458 46.955C192.434 47.0737 192.387 47.3111 192.221 47.5485C192.149 47.6673 191.841 48.1421 190.867 48.522C189.965 48.8781 189.11 48.9256 188.446 48.9019C188.422 49.2105 188.422 49.5192 188.398 49.8278L195.711 49.8991C198.133 49.9228 200.578 49.9228 203 49.9466C203 49.7566 203 49.5429 203 49.353C202.952 49.1868 202.929 49.0443 202.881 48.8781C202.786 48.8544 202.525 48.8307 202.24 48.7594C202.24 48.7594 199.438 48.427 197.919 45.5067C197.61 44.9131 184.006 10.4623 180.895 2.41346C180.61 1.67744 180.349 0.917668 180.064 0.181641C178.046 0.181641 176.052 0.181641 174.034 0.181641C171.944 0.181641 169.879 0.181641 167.789 0.181641ZM179.305 10.3436C180.326 13.0028 182.534 18.8435 184.243 23.3546C185.953 27.8658 187.377 31.6409 187.401 31.7833C187.425 31.9495 183.911 32.0445 177.31 32.092C171.446 32.1157 167.148 32.0445 167.148 31.9258C167.148 31.8071 167.789 30.0738 168.549 28.0794C171.422 20.553 176.598 6.99583 177.002 5.83243C177.049 5.68997 177.191 5.54751 177.31 5.54751C177.405 5.54751 178.307 7.70811 179.305 10.3436Z" fill="#252525"/>
@@ -353,7 +366,7 @@
         </div>
         <hr>
         <div class= "mid-footer">
-            <svg xmlns="http://www.w3.org/2000/svg" width="108" height="128" viewBox="0 0 108 128" fill="none">
+            <svg class="logo-bordeaux" xmlns="http://www.w3.org/2000/svg" width="108" height="128" viewBox="0 0 108 128" fill="none">
                 <g clip-path="url(#clip0_559_325)">
                   <path d="M0 127.358H106.536V20.8125H0V127.358Z" fill="#D30039"/>
                   <path d="M9.10059 97.5317C9.10059 100.042 9.3215 102.496 9.71729 104.898C13.2304 84.0225 31.3787 68.0864 53.2793 68.0864C75.1524 68.0864 93.3191 84.0225 96.8199 104.898C97.228 102.496 97.4335 100.042 97.4335 97.5317C97.4335 73.1397 77.6653 53.3714 53.2793 53.3714C28.872 53.3714 9.10059 73.1397 9.10059 97.5317Z" fill="white"/>
@@ -465,7 +478,7 @@
                 </li>
             </ul>
         </div>
-    </footer>  
+    </footer>
 </body>
 <script>
 const languageSelector = document.getElementById("language-selector");
