--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="./styles/header.css" rel="stylesheet" type="text/css">
     <link href="./styles/footer.css" rel="stylesheet" type="text/css">
     <link href="./styles/index.css" rel="stylesheet" type="text/css">
+    <link rel="preload" as="font" href="./assets/fonts/helvetica/Helvetica.woff2" type="font/woff2" crossorigin="anonymous">
 
     <!-- META -->
     <title>MusBA - Découvrez le Musée des Beaux-Arts Bordeaux</title>
@@ -197,7 +198,7 @@
         </div>
     </section>
     <section class="visite">
-        <img class="image-visite" src="./assets/img/visite.webp" alt="Photographie du bâtiment du MusBA">
+        <img class="image-visite" src="./assets/img/index/visite.webp" alt="Photographie du bâtiment du MusBA">
         <div class="box-text-visite">
             <h2 class="title-section">Préparez votre visite</h2>
             <h3 class="title-visite">Horaires</h3>
@@ -279,7 +280,7 @@
                     </svg>
                   </a>
                 </div>
-                <img src="./assets/img/collection-1.webp" alt="Tableau de ...">
+                <img src="./assets/img/index/collection-1.webp" alt="Tableau de ...">
               </div>
               <div class="slide">
                 <div class="box-text-collection">
@@ -299,7 +300,7 @@
                     </svg>
                   </a>
                 </div>
-                <img src="./assets/img/collection-2.webp" alt="Tableau de ...">
+                <img src="./assets/img/index/collection-2.webp" alt="Tableau de ...">
               </div>
               <div class="slide">
                 <div class="box-text-collection">
@@ -319,7 +320,7 @@
                     </svg>
                   </a>
                 </div>
-                <img src="./assets/img/collection-3.webp" alt="Tableau de ...">
+                <img src="./assets/img/index/collection-3.webp" alt="Tableau de ...">
               </div>
               <div class="slide">
                 <div class="box-text-collection">
@@ -339,7 +340,7 @@
                     </svg>
                   </a>
                 </div>
-                <img src="./assets/img/collection-4.webp" alt="Tableau de ...">
+                <img src="./assets/img/index/collection-4.webp" alt="Tableau de ...">
               </div>
               <div class="slide">
                 <div class="box-text-collection">
@@ -359,7 +360,7 @@
                     </svg>
                   </a>
                 </div>
-                <img src="./assets/img/collection-5.webp" alt="Tableau de ...">
+                <img src="./assets/img/index/collection-5.webp" alt="Tableau de ...">
               </div>
           </div>
       </div>
@@ -403,7 +404,7 @@
       <h2 class="title-section">Actualités</h2>
       <div class="flex-news">
         <div class="box-news">
-          <img src="./assets/img/actus-1.webp" alt="" class="img-news">
+          <img src="./assets/img/index/actus-1.webp" alt="" class="img-news">
           <div class="text-box-news">
             <h3 class="title-news">Rénovations au musée : de longs travaux</h3>
             <p class="date-news">13/10/2023</p>
@@ -425,7 +426,7 @@
           </div>
       </div>
       <div class="box-news">
-        <img src="./assets/img/actus-2.webp" alt="" class="img-news">
+        <img src="./assets/img/index/actus-2.webp" alt="" class="img-news">
         <div class="text-box-news">
           <h3 class="title-news">Le musée recrute et cherche son prochain stagiaire ! </h3>
           <p class="date-news">12/11/2023</p>
@@ -879,7 +880,7 @@
         <p class="presentation-musba">Le musée des Beaux-Arts de Bordeaux est un musée d'art européen situé dans le centre-ville de Bordeaux. Il abrite une collection de peintures, sculptures et objets d'art allant de la Renaissance au XIXe siècle. Parmi les œuvres les plus célèbres du musée figurent "Le Christ au jardin des oliviers" de Poussin, "Le Martyre de Saint Denis" de Rubens et "La Liberté guidant le peuple" de Delacroix.</p>
         <div class="newsletter">
             <p class="title-newsletters">Tout savoir sur <br> l’actualité du MusBA</p>
-            <input type="email" id="email" name="email" placeholder="Saisissez votre email ..."/>
+            <input type="email" name="email" placeholder="Saisissez votre email ..."/>
         </div>
     </div>
     <hr>
