--- a/exposition.html
+++ b/exposition.html
@@ -361,7 +361,7 @@
             <p class="presentation-musba">Le musée des Beaux-Arts de Bordeaux est un musée d'art européen situé dans le centre-ville de Bordeaux. Il abrite une collection de peintures, sculptures et objets d'art allant de la Renaissance au XIXe siècle. Parmi les œuvres les plus célèbres du musée figurent "Le Christ au jardin des oliviers" de Poussin, "Le Martyre de Saint Denis" de Rubens et "La Liberté guidant le peuple" de Delacroix.</p>
             <div class="newsletter">
                 <p class="title-newsletters">Tout savoir sur <br> l’actualité du MusBA</p>
-                <input type="email" id="email" name="email" placeholder="Saisissez votre email ..."/>
+                <input type="email" name="email" placeholder="Saisissez votre email ..."/>
             </div>
         </div>
         <hr>
