--- a/exposition.html
+++ b/exposition.html
@@ -445,10 +445,7 @@
                 </ul>
             </div><div class="link-footer">
                 <p class="title-link-footer">Horaires</p>
-                <ul>
-                   <p class="texte-horaires">Du mercredi au lundi de 11h à 18h.<br>
-                    Fermé mardis et jours fériés.</p>
-                </ul>
+                <p class="texte-horaires">Du mercredi au lundi de 11h à 18h.<br>Fermé mardis et jours fériés.</p>
             </div>
         </div>
         <div class= "end-footer">
