--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
   <header>
     <div class="top-header">
-        <a href="./index.html" >
+        <a href="./index.html" title="Retour à l'accueil" >
           <svg class="logo" xmlns="http://www.w3.org/2000/svg" width="159" height="70" viewBox="0 0 159 70" fill="none">
             <path d="M0.0554703 0.862128C0.425273 0.917598 0.979978 1.02854 1.57166 1.26891C1.57166 1.26891 3.14332 1.49079 3.80897 2.80359C4.14179 3.45075 4.16028 4.41224 4.25273 21.1458C4.25273 27.0257 4.25273 32.924 4.25273 38.8039C5.45459 38.8039 6.65645 38.8039 7.85831 38.8039L7.95076 23.9193C8.04321 9.25665 8.04321 9.05326 8.37604 9.77438C8.57943 10.1812 9.42997 12.1781 10.299 14.212C11.1496 16.2459 12.0001 18.2429 12.185 18.6497C12.3699 19.0564 13.2944 21.2198 14.2374 23.4571C15.1989 25.6944 17.0664 30.0581 18.3977 33.1644L20.8199 38.8039H22.6504H24.481L25.1651 37.2322C29.1775 27.9132 33.1713 18.5757 37.1837 9.25665C37.1652 18.2614 37.1282 27.2476 37.1097 36.2523C37.0727 36.4557 36.9988 36.77 36.7769 37.0473C36.0188 37.9903 34.1328 37.9349 34.1328 37.9349C34.1328 37.9349 33.6706 37.9349 33.0049 37.9534C33.0049 38.1013 33.0049 38.2677 33.0049 38.4341C33.0049 38.5635 33.0234 38.693 33.0419 38.8039C36.9433 38.8039 40.8262 38.8039 44.7277 38.8039C44.7277 38.6745 44.7092 38.545 44.7092 38.4156C44.7092 38.2492 44.7092 38.1013 44.7092 37.9534C44.5428 37.9534 44.2284 37.9719 43.8586 37.8979C43.8586 37.8979 42.1945 37.8794 41.3809 36.3077C41.0666 35.6976 41.0481 34.4402 41.0481 17.947V0.251953H39.1251H37.2022L36.4626 2.0455C35.6675 3.94998 34.8539 5.83598 34.0588 7.74046C30.3423 16.5048 26.5703 25.2321 22.7244 33.941C22.1512 32.7391 21.2822 30.8901 20.2467 28.5973C17.6211 22.8099 16.0125 18.7051 14.0525 14.249C12.6103 10.9577 10.5579 6.22427 8.09868 0.362894C5.39912 0.344404 2.69956 0.325914 0 0.307423C0.0184901 0.492325 0.0369802 0.677226 0.0554703 0.862128Z" fill="white"/>
             <path d="M88.6235 0.141288C88.6235 0.344679 88.6235 0.529581 88.6235 0.732972C88.9933 0.732972 89.5296 0.732972 90.1582 0.880893C90.7684 1.01032 91.4155 1.15825 91.9148 1.60201C92.525 2.13822 92.7099 2.91481 92.7099 3.3031C92.7468 9.21995 92.7653 15.1368 92.8023 21.0536L92.8948 38.8042H102.251C110.608 38.8042 111.736 38.7672 113.031 38.4714C116.932 37.5469 119.521 35.0877 120.501 31.3157C120.907 29.6885 120.926 26.3973 120.501 25.066C119.724 22.5513 117.616 20.0367 115.342 18.8348C114.75 18.5205 114.269 18.1877 114.269 18.0952C114.288 17.9843 114.658 17.633 115.12 17.3001C116.192 16.5051 117.468 14.7855 117.967 13.4172C118.226 12.7701 118.411 11.7531 118.467 10.7546C118.781 5.59588 115.933 1.87936 110.701 0.622032C110.682 0.622032 110.368 0.548071 110.054 0.47411C106.448 -0.191535 95.1136 -0.00663354 88.6235 0.141288ZM110.479 3.82083C112.143 4.37553 113.345 5.374 114.084 6.79774C114.713 8.01809 114.732 8.14752 114.713 10.0335C114.713 11.6052 114.639 12.1969 114.306 13.0289C113.77 14.3972 112.531 15.636 111.163 16.1907C110.146 16.5975 109.85 16.616 103.453 16.7085C99.7916 16.7639 96.7407 16.7824 96.6667 16.7454C96.5743 16.7085 96.5188 13.6946 96.5188 10.0335V3.37706L103.046 3.43253C108.5 3.50649 109.702 3.56196 110.479 3.82083ZM105.764 20.0922C110.608 20.1661 111.311 20.2771 113.326 21.3125C116.673 23.0321 118.004 27.3033 116.47 31.4266C116.007 32.6655 114.621 34.1632 113.437 34.7179C111.773 35.5129 111.145 35.5684 103.693 35.5684H96.5188V27.821C96.5188 22.8842 96.5928 20.0367 96.7037 19.9997C96.7962 19.9627 97.8686 19.9627 99.052 19.9812C100.254 20.0182 103.268 20.0552 105.764 20.0922Z" fill="white"/>
@@ -638,19 +638,11 @@
             </form>
           </div>
           <div class="maps-box">
-            <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
-              <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div><script>(function () {
-                  var setting = {"query":"Bordeaux Museum of Fine Arts, 20 Cours d'Albret, Bordeaux, France","width":630,"height":590,"satellite":false,"zoom":17,"placeId":"ChIJYwjjXsInVQ0Rd9HNbTC95E8","cid":"0x4fe4bd306dcdd177","coords":[44.83736599999999,-0.5805429999999998],"lang":"fr","queryString":"Bordeaux Museum of Fine Arts, 20 Cours d'Albret, Bordeaux, France","centerCoord":[44.83736599999999,-0.5805429999999998],"id":"map-9cd199b9cc5410cd3b1ad21cab2e54d3","embed_id":"1014863"};
-                  var d = document;
-                  var s = d.createElement('script');
-                  s.src = 'https://1map.com/js/script-for-user.js?embed_id=1014863';
-                  s.async = true;
-                  s.onload = function (e) {
-                    window.OneMap.initMap(setting)
-                  };
-                  var to = d.getElementsByTagName('script')[0];
-                  to.parentNode.insertBefore(s, to);
-                })();</script><a href="https://1map.com/fr/map-embed">1 Map</a></div>
+            <div style="width: 100%">
+              <iframe width="610" height="590" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=610&amp;height=590&amp;hl=fr&amp;q=20%20Cr%20d'Albret,%2033000%20Bordeaux,%20Mus%C3%A9e%20des%20beaux%20arts%20bordeaux+(MusBA)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+                <a href="https://www.maps.ie/population/">Find Population on Map</a>
+              </iframe>
+            </div>
             <div class="contact-details">
               <div class="box-contact-details">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="40" viewBox="0 0 30 40" fill="none">
@@ -964,10 +956,7 @@
             </ul>
         </div><div class="link-footer">
             <p class="title-link-footer">Horaires</p>
-            <ul>
-               <p class="texte-horaires">Du mercredi au lundi de 11h à 18h.<br>
-                Fermé mardis et jours fériés.</p>
-            </ul>
+            <p class="texte-horaires">Du mercredi au lundi de 11h à 18h.<br>Fermé mardis et jours fériés.</p>
         </div>
     </div>
     <div class= "end-footer">
