--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <path d="M4.25244 61.8426C4.25244 64.5422 4.27093 67.2603 4.27093 69.9598C4.78866 69.9598 5.32487 69.9413 5.84259 69.9413C9.0229 70.0708 10.2802 69.3866 10.2802 67.5561C10.2802 67.0938 10.2432 66.8165 10.1323 66.5946C10.0399 66.4097 9.92892 66.2803 9.81798 66.1693C9.59609 65.929 9.37421 65.7626 9.2078 65.6701C9.31874 65.5222 9.48515 65.3003 9.61458 64.986C9.67005 64.8565 10.0214 63.8766 9.50364 62.9521C9.18931 62.3974 8.70857 62.1385 8.56065 62.046C8.04292 61.7687 7.61765 61.8242 6.36032 61.8057C5.80561 61.8242 5.10299 61.8242 4.25244 61.8426ZM8.4682 63.5253C8.61612 63.7471 8.70857 64.0245 8.69008 64.2464C8.67159 64.7086 8.24631 65.1339 7.65463 65.3003C6.952 65.2818 6.26787 65.2633 5.56524 65.2633C5.56524 64.4867 5.54675 63.7102 5.54675 62.9336C6.15693 62.9521 6.50824 62.9521 6.87804 62.9521C7.50671 62.9705 7.85802 62.9705 8.17235 63.2109C8.33876 63.3403 8.43121 63.4883 8.4682 63.5253ZM8.57914 66.6501C8.81951 66.872 8.98592 67.2603 8.98592 67.5746C8.98592 68.5176 8.39423 68.8689 6.82257 68.8689H5.47279V67.5746V66.2803H6.82257C7.93198 66.2803 8.24631 66.3542 8.57914 66.6501Z" fill="white"/>
           </svg>
         </a>
-        <select class="language" id="language-selector" value="FR">
+        <select class="language" id="language-selector" value="FR" aria-label="Choix de la langue">
             <option value="FR" selected>FR</option>
             <option value="EN">EN</option>
             <option value="ES">ES</option>
@@ -267,7 +267,7 @@
                   <p class="tag-slide">Temporaire</p>
                   <p class="title-collection">Rétrospective Jean Dupas</p>
                   <p class="text-collection">Recherche d'œuvres, archives et documentation</p>
-                  <a class="link">En savoir plus
+                  <a href="#" class="link">En savoir plus
                     <svg xmlns="http://www.w3.org/2000/svg" width="23" height="24" viewBox="0 0 23 24" fill="none">
                       <g clip-path="url(#clip0_617_205)">
                         <path d="M14.973 9.75494L6.36396 18.364L4.94975 16.9497L13.5588 8.34072L5.63918 8.34072L5.65685 6.34315H16.9706V17.6569L14.973 17.6745L14.973 9.75494Z" fill="white"/>
@@ -287,7 +287,7 @@
                   <p class="tag-slide">permanente - Nouveau</p>
                   <p class="title-collection">British or not ?</p>
                   <p class="text-collection">Catalogue en librairien</p>
-                  <a class="link">En savoir plus
+                  <a href="#" class="link">En savoir plus
                     <svg xmlns="http://www.w3.org/2000/svg" width="23" height="24" viewBox="0 0 23 24" fill="none">
                       <g clip-path="url(#clip0_617_205)">
                         <path d="M14.973 9.75494L6.36396 18.364L4.94975 16.9497L13.5588 8.34072L5.63918 8.34072L5.65685 6.34315H16.9706V17.6569L14.973 17.6745L14.973 9.75494Z" fill="white"/>
@@ -307,7 +307,7 @@
                   <p class="tag-slide">permanente</p>
                   <p class="title-collection">Renaissance(s), 15e-16e siècles</p>
                   <p class="text-collection">L’art du portrait séduisant de l’Europe</p>
-                  <a class="link">En savoir plus
+                  <a href="#" class="link">En savoir plus
                     <svg xmlns="http://www.w3.org/2000/svg" width="23" height="24" viewBox="0 0 23 24" fill="none">
                       <g clip-path="url(#clip0_617_205)">
                         <path d="M14.973 9.75494L6.36396 18.364L4.94975 16.9497L13.5588 8.34072L5.63918 8.34072L5.65685 6.34315H16.9706V17.6569L14.973 17.6745L14.973 9.75494Z" fill="white"/>
@@ -327,7 +327,7 @@
                   <p class="tag-slide">permanente</p>
                   <p class="title-collection">Le 17e siècle du Baroque au Classicisme</p>
                   <p class="text-collection">Naturalisme, cadrages serrés et sujets dramatiques</p>
-                  <a class="link">En savoir plus
+                  <a href="#" class="link">En savoir plus
                     <svg xmlns="http://www.w3.org/2000/svg" width="23" height="24" viewBox="0 0 23 24" fill="none">
                       <g clip-path="url(#clip0_617_205)">
                         <path d="M14.973 9.75494L6.36396 18.364L4.94975 16.9497L13.5588 8.34072L5.63918 8.34072L5.65685 6.34315H16.9706V17.6569L14.973 17.6745L14.973 9.75494Z" fill="white"/>
@@ -347,7 +347,7 @@
                   <p class="tag-slide">Permanente</p>
                   <p class="title-collection">Quand la 3D rencontre la peinture</p>
                   <p class="text-collection">La statuaire de la Renaissance au siècle des Lumières</p>
-                  <a class="link">En savoir plus
+                  <a href="#" class="link">En savoir plus
                     <svg xmlns="http://www.w3.org/2000/svg" width="23" height="24" viewBox="0 0 23 24" fill="none">
                       <g clip-path="url(#clip0_617_205)">
                         <path d="M14.973 9.75494L6.36396 18.364L4.94975 16.9497L13.5588 8.34072L5.63918 8.34072L5.65685 6.34315H16.9706V17.6569L14.973 17.6745L14.973 9.75494Z" fill="white"/>
@@ -446,7 +446,7 @@
           </a>
         </div>
     </div>
-      <a href="" class="link-more">
+      <a href="#" class="link-more">
           Toutes les dernières actualités 
           <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 45 45" fill="none">
               <g clip-path="url(#clip0_204_3348)">
@@ -567,7 +567,7 @@
                 <p class="date-agenda">25 Oct. 2023</p>
             </div>
         </div>
-        <a href="" class="link-more">
+        <a href="#" class="link-more">
             Voir plus
             <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 45 45" fill="none">
                 <g clip-path="url(#clip0_204_3348)">
@@ -593,7 +593,7 @@
             </svg>
             <div class="box-text-asso">
                 <p class="text-asso">Participer à l’enrichissement des collections, écouter des historiens de l'art, apprendre à voir, regarder le beau et tisser des liens... La Société des Amis du musée des Beaux-Arts de Bordeaux est faite pour vous</p>
-                <a href="" class="link">
+                <a href="#" class="link">
                     En savoir plus 
                     <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 27 27" fill="none">
                     <g clip-path="url(#clip0_472_158)">
@@ -639,8 +639,7 @@
           </div>
           <div class="maps-box">
             <div style="width: 100%">
-              <iframe width="610" height="590" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=610&amp;height=590&amp;hl=fr&amp;q=20%20Cr%20d'Albret,%2033000%20Bordeaux,%20Mus%C3%A9e%20des%20beaux%20arts%20bordeaux+(MusBA)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
-                <a href="https://www.maps.ie/population/">Find Population on Map</a>
+              <iframe width="610" height="590" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=610&amp;height=590&amp;hl=fr&amp;q=20%20Cr%20d'Albret,%2033000%20Bordeaux,%20Mus%C3%A9e%20des%20beaux%20arts%20bordeaux+(MusBA)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" title="Map pour retrouver le musée des beaux arts de Bordeaux">
               </iframe>
             </div>
             <div class="contact-details">
