--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <a href="#">Billeterie</a>
                 </li>
                 <li>
-                    <a href="#">Nos expositions</a>
+                    <a href="./exposition.html">Nos expositions</a>
                 </li>
                 <li>
                     <a href="#">Nos collections</a>
