--- a/exposition.html
+++ b/exposition.html
@@ -31,6 +31,7 @@
     <meta property="og:site_name" content="Musba">
     <meta property="og:url" content="https://musba.netlify.app/">
     <meta property="og:description" content="La collection Absolutely Bizarre du musée des beau arts est là ! L'occasion de découvrir une vision de l'art revisité par les artistes anglais du XIX siècle.">
+    <meta property="og:image" content="hhttps://musba.netlify.app/assets/img/logos/musba.svg">
 </head>
 <body>
     <header>
